--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tipsklubben",
-  "version": "1.0.0"
+  "version": "1.0.0",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -12,4 +12,3 @@
     "react-dom": "latest"
   }
 }
-“Tilføjer package.json”.
